5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1753_1529.log
== TEST (2019-05-16 19:07:02) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
while(0<=qinf<=50000):
	qinf=qinf+qinf*pinf/100
	mes=mes+1
print(mes)

-- OUTPUT:
12219
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:26) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav
	mes=mes+1
print(mes)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:41) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav
	mes=mes+1
print(mes)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:24) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)
	mes=mes+1
print(mes)

-- OUTPUT:
12219
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:11:04) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
4622
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:11:44) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
4622
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:24) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=qinf+qinf*pinf/100-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
4622
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:52) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=qinf+qinf*pinf/100-qcav*pcav/100
	mes=mes+1
print(round(mes,2)

-- ERROR:
File "XXXX", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:15:16) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=qinf+qinf*pinf/100-qcav*pcav/100
	mes=mes+1
print(round(mes,2))

-- OUTPUT:
4622
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:51) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qcav*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
5334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:17:47) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0>=qinf>=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
5334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:16) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf>=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
5334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:41) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0>=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
5334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:09) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
4622
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:33) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)*qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:10) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)/qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:04) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=1
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
4623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:52) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=1
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf-pinf/100)-qcav-pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:22:27) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf-pinf/100)-qcav-pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:22:57) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf-pinf/100)*qcav-pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:23:49) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf/100)-qcav*pcav/100
	mes=mes+1
print(mes)

-- OUTPUT:
4622
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:20) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:42) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=1
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:10) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes-1
print(mes)

-- OUTPUT:
-47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:53) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf-qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:27:24) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- EXECUTION TIME:
0.166194
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:
47
-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
6
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:42) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:28:13) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- EXECUTION TIME:
0.197601
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:
47
-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
6
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:15) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:29:02) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- EXECUTION TIME:
0.190008
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:
47
-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
6
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:06) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<=qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:15) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:44) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:11) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:39) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
	print(mes)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:32:30) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
	print(mes)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:32:59) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:18) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:28) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=1
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:38:05) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<=50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:38:57) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0>qinf>50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:23) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:41:08) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<qinf<50000):
	qinf=(qinf+qinf*pinf)+qcav*pcav
	mes=mes+1
print(mes)

-- OUTPUT:
68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:42:44) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<total<50000):
	total=(qinf+qinf*pinf)
	total=qcav+qcav*pcav
	mes=mes+1
print(mes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(0<total<50000):
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:43:39) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<total<50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(mes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(0<total<50000):
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:44:05) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0<total<50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(0<total<50000):
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:44:29) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(0>total<50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(0>total<50000):
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:44:48) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(total<50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(total<50000):
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:29) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(total>50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(total>50000):
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:50) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf>50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:15) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf>50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(mes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:47:05) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf>50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:48:00) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
total=0
while(qinf>50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(mes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:48:42) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
total=0
while(0<=qinf<=50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(mes)

-- OUTPUT:
124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:50:15) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
total=qinf+qcav
while(0<=total<=50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(mes)

-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:50:33) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
total=qinf+qcav
while(0<=total<=50000):
	qinf=qinf+qinf*pinf
	qcav=qcav+qcav*pcav
	total=qinf+qcav
	mes=mes+1
print(mes)

-- EXECUTION TIME:
0.170435
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:
45
-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
46
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 20:00:02) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- EXECUTION TIME:
1574.82
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 20:00:02) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- EXECUTION TIME:
1575.02
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 20:00:02) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
print(mes)

-- EXECUTION TIME:
1575.18
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 20:00:05) 
-- CODE:
qinf=int(input("digite o numero:"))
qcav=int(input("digite o numero:"))
pinf=float(input("digite o numero:"))
pcav=float(input("digite o numero:"))
pinf=pinf/100
pcav=pcav/100
mes=0
i=0
while(qinf<50000):
	qinf=(qinf+qinf*pinf)-qcav*pcav
	mes=mes+1
	print(mes)

-- EXECUTION TIME:
1653.58
-- TEST CASE 1:
---- input:
8000
6000
1.5
4.0
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
1500
7500
3.2
4.0
---- correct output:
46
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
93400
999
100.0
3.7

---- correct output:
0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
